# kimm_husky_gui

./: CMakeLists.txt  package.xml  plugin.xml  setup.py
config/: gui.perspective  gui_rviz.perspective  husky_gui.perspective  husky_rviz.rviz  temp.rviz  velodyne_rviz.rviz
include/kimm_husky_gui/: kimm_husky_gui.h
launch/: basic_gui.launch  gui.launch  gui_rviz.launch  gui_rviz_ns1.launch
scripts/: kimm_husky_gui
src/: kimm_husky_gui.cpp  kimm_husky_gui.ui
